<resources>
    <string name="app_name">UniMobile</string>
    <string name="hintEmail">Email</string>
    <string name="hintLogin">Login</string>
    <string name="hintPassword">Password</string>
    <string name="signIn">Sign In</string>
    <string name="noAccount">I don\'t have an account!</string>
    <string name="noAccountMessage">To register, contact the administrator!</string>
    <string name="rememberME">Remember me</string>
    <string name="errorInput">Input Error</string>
    <string name="savedInfo">Saved</string>
    <string-array name="spinnerMainTag">
        <item>\@mail.ru</item>
        <item>\@gmail.com</item>
    </string-array>
    <string name="title_activity_list_university">ListUniversityActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="teacher">Teachers</string>
    <string name="university">Universities</string>
    <string name="students">Students</string>
    <string name="listuniversities">list of universities</string>
    <string name="search">Search</string>
    <string name="errorSignin">Error! Wrong login or password</string>
    <string name="specialty">Specialty</string>
    <string name="addStudent">Add student</string>
    <string name="addTeacher">Add teacher</string>
    <string name="addSpecialty">Add specialty</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="surname">Surname</string>
    <string name="fullname">Full name</string>
    <string name="add">Add</string>
    <string name="load">load per year (up to 200 hours)</string>
    <string name="added">Added</string>
    <string name="listspec">List of specialties</string>
    <string name="ClearDB">Clear DB</string>
    <string name="cleared">Сleared</string>
    <string name="error">Error!</string>
    <string name="errorAdd">Error! There is already such a specialty</string>
    <string name="deleted">Deleted</string>
    <string name="certificatescore">Сertificate score (example: 3.25)</string>
    <string name="errorAddStudent">Error! There is already such a student</string>
    <string name="liststudent">students list</string>
    <string name="adminMessage">You are an administrator</string>
    <string name="errorClickMenu">You have no rights!</string>
    <string name="errorAddExistSyudent">Incorrect data for an existing student!</string>
    <string name="errorClearDBSpec">Unable to clear database</string>
    <string name="nodelete">Error! It is impossible to delete a specialty!</string>
    <string name="errorAddExistUser">Error! A user with this login already exists</string>
    <string name="errorNoSpec">Error! Add specialties!</string>
    <string name="listteacher">list of teachers</string>
    <string-array name="typeSpecialty">
        <item>Budget</item>
        <item>Commerce</item>
    </string-array>
</resources>