<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_university">

    <fragment
        android:id="@+id/navigation_university"
        android:name="com.example.zd5.Fragments.home.HomeFragment"
        android:label="@string/university"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_teacher"
        android:name="com.example.zd5.Fragments.notifications.NotificationsFragment"
        android:label="@string/teacher"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_students"
        android:name="com.example.zd5.Fragments.dashboard.DashboardFragment"
        android:label="@string/students"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_specialty"
        android:name="com.example.zd5.Fragments.specialty.SpecialtyFragment"
        android:label="@string/specialty"
        tools:layout="@layout/fragment_specialty" />
</navigation>