<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo">
    </ImageView>

    <TextView
        android:id="@+id/textviewNameApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        style="@style/MyTextViewStyle">
    </TextView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890_."
                android:id="@+id/edittextEmail"
                android:inputType="text"
                android:maxLength="20"
                android:background="@drawable/background_view"
                android:layout_width="210dp"
                android:textSize="18dp"
                android:paddingStart="10dp"
                android:hint="@string/hintEmail"
                android:textColorHint="@color/accentColorGrey"
                android:layout_height="40dp">
            </EditText>
                <Spinner
                    android:id="@+id/spinnerEmailTags"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/background_view"
                    android:entries="@array/spinnerMainTag"
                    android:layout_height="40dp">
                </Spinner>
            </LinearLayout>
            <EditText
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:id="@+id/edittextLogin"
                android:inputType="text"
                android:maxLength="20"
                android:background="@drawable/background_view"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:hint="@string/hintLogin"
                android:textColorHint="@color/accentColorGrey"
                android:layout_height="40dp">
            </EditText>

            <EditText
                android:id="@+id/edittextPassword"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456890"
                android:inputType="textPassword"
                android:background="@drawable/background_view"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:hint="@string/hintPassword"
                android:textColorHint="@color/accentColorGrey"
                android:layout_height="40dp">
            </EditText>

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_button"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/signIn">
            </Button>

            <CheckBox
                android:id="@+id/checkboxRememberMe"
                android:layout_width="wrap_content"
                android:text="@string/rememberME"
                android:layout_marginRight="5dp"
                android:textColor="@color/accentColorWheat"
                android:textSize="15dp"
                android:layout_gravity="right"
                android:layout_height="40dp">
            </CheckBox>

            <TextView
                android:id="@+id/textviewRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:onClick="onClickTextView"
                android:textSize="15dp"
                android:textColor="@color/accentColorWheat"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/noAccount">
            </TextView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>