<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Activity.AddSpecialtyActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/MyTextViewStyle"
                android:text="@string/addSpecialty">
            </TextView>

            <EditText
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:id="@+id/edittextTitle"
                android:inputType="text"
                android:maxLength="30"
                android:background="@drawable/background_view"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:hint="@string/specialty"
                android:textColorHint="@color/accentColorGrey"
                android:layout_height="40dp">
            </EditText>

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_view"
                android:entries="@array/typeSpecialty"
                android:layout_height="40dp">
            </Spinner>

            <EditText
                android:digits="1234567890"
                android:id="@+id/edittextLoad"
                android:inputType="text"
                android:maxLength="3"
                android:background="@drawable/background_view"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:hint="@string/load"
                android:textColorHint="@color/accentColorGrey"
                android:layout_height="40dp">
            </EditText>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_button"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/add">
            </Button>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>