<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".Activity.AddTeacherActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/MyTextViewStyle"
                android:text="@string/addTeacher">
            </TextView>
            <EditText
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:id="@+id/edittextLogin"
                android:inputType="text"
                android:maxLength="20"
                android:background="@drawable/background_view"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:hint="@string/hintLogin"
                android:textColorHint="@color/accentColorGrey"
                android:layout_height="40dp">
            </EditText>

            <EditText
                android:id="@+id/edittextPassword"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456890"
                android:inputType="textPassword"
                android:background="@drawable/background_view"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:hint="@string/hintPassword"
                android:textColorHint="@color/accentColorGrey"
                android:layout_height="40dp">
            </EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890_."
                    android:id="@+id/edittextEmail"
                    android:inputType="text"
                    android:maxLength="20"
                    android:background="@drawable/background_view"
                    android:layout_width="210dp"
                    android:textSize="18dp"
                    android:paddingStart="10dp"
                    android:hint="@string/hintEmail"
                    android:textColorHint="@color/accentColorGrey"
                    android:layout_height="40dp">
                </EditText>
                <Spinner
                    android:id="@+id/spinnerEmailTags"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/background_view"
                    android:entries="@array/spinnerMainTag"
                    android:layout_height="40dp">
                </Spinner>
            </LinearLayout>

            <EditText
                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:id="@+id/edittextfullname"
                android:inputType="text"
                android:maxLength="40"
                android:background="@drawable/background_view"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:hint="@string/fullname"
                android:textColorHint="@color/accentColorGrey"
                android:layout_height="40dp">
            </EditText>


            <DatePicker
                android:id="@+id/dateBirthday"
                android:layout_width="392dp"
                android:layout_height="200dp"
                android:background="@drawable/background_view"
                android:layout_marginTop="20dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"></DatePicker>

            <Spinner
                android:id="@+id/spinnerSpecialty"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_view"
                android:layout_height="40dp">
            </Spinner>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_button"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/add">
            </Button>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>